@@ -751,16 +751,23 @@ public class StaticUtils
 
         // handle "wildcard characters" ? and * (only if requested)
         // do this last, or the additional period (.) will cause trouble
-        if (escapeWildcards) {
+        if (escapeWildcards) 
+        {
             // simply escape * and ?
             text = text.replaceAll("\\?", "\\\\?");
             text = text.replaceAll("\\*", "\\\\*");
         }
-        else {
+        else 
+        {
             // convert * (0 or more characters) and ? (0 or 1 character)
             // to their regex equivalents (\S* and \S? respectively)
-            text = text.replaceAll("\\?", "\\S?"); // do ? first, or * will be converted twice
-            text = text.replaceAll("\\*", "\\S*");
+//            text = text.replaceAll("\\?", "\\S?"); // do ? first, or * will be converted twice
+//            text = text.replaceAll("\\*", "\\S*");
+//          The above lines were not working:
+//          [ 1680081 ] Search: simple wilcards do not work
+//          The following correction was contributed by Tiago Saboga
+            text = text.replaceAll("\\?", "\\\\S?"); // do ? first, or * will be converted twice
+            text = text.replaceAll("\\*", "\\\\S*");
         }
 
         return text;
